# self_similarity

./: .gitignore  CMakeLists.txt  build.sh
cmake/: Trapper.cmake
include/nvidia/: cmd_arg_reader.h
src/: CMakeLists.txt_new
src/attributes/transfer/: meshmatch.cpp  meshmatch.h
src/benchmarks/: eigen_decomp.cpp  model_manifest.cpp
src/geometry/: mesh.cpp  patch.cpp
src/geometry/segmentation/: surface_by_numbers.h
src/gui/: control_display.cpp  control_display.h
src/matching/: constrained_relation_solver.cpp  desire_set.cpp  desire_set.h  quadratic_bump.cpp  quadratic_bump.h  surface_stroke.h
src/matching/parameterization/: moebius_registration.cpp  pt_unfolding.cpp
src/shape_signatures/: heat_kernel_signature.cpp  hks.cpp  hks.h
